--- a/src/styles.css
+++ b/src/styles.css
@@ -57,10 +57,11 @@ footer,
     max-height: 542px;
 }
 
-.taskBtnContiner {
+.taskBtnContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+    width: 100%;
 }
 
 footer {
@@ -101,6 +102,7 @@ nav > button, #btnSubmitTask, #btnSubmitProject, .projectsList, .taskBtn {
     overflow: hidden;
     display: inline-block;
     cursor: pointer;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
 
 nav > button:hover, #btnSubmitTask:hover, #btnSubmitProject:hover, .projectsList:hover,  .taskBtn:hover {
